--- a/mobileApp/package.json
+++ b/mobileApp/package.json
@@ -4,13 +4,22 @@
 	"readme": "NativeScript Application",
 	"repository": "<fill-your-repository-here>",
 	"nativescript": {
-		"id": "org.nativescript.mobileApp"
+		"id": "org.nativescript.mobileApp",
+		"tns-android": {
+			"version": "3.4.1"
+		}
 	},
 	"dependencies": {
-		"nativescript-theme-core": "~1.0.4",
-		"tns-core-modules": "~3.4.0",
 		"nativescript-accelerometer": "^2.0.1",
 		"nativescript-socket.io": "^0.9.0",
-		"nativescript-vibrate": "^2.0.1"
+		"nativescript-theme-core": "~1.0.4",
+		"nativescript-vibrate": "^2.0.1",
+		"tns-core-modules": "~3.4.0"
+	},
+	"devDependencies": {
+		"babel-traverse": "6.4.5",
+		"babel-types": "6.4.5",
+		"babylon": "6.4.5",
+		"lazy": "1.0.11"
 	}
 }
