--- a/mobileApp/package.json
+++ b/mobileApp/package.json
@@ -11,6 +11,7 @@
 	},
 	"dependencies": {
 		"nativescript-accelerometer": "^2.0.1",
+		"nativescript-geolocation": "^4.2.3",
 		"nativescript-socket.io": "^0.9.0",
 		"nativescript-theme-core": "~1.0.4",
 		"nativescript-vibrate": "^2.0.1",
