--- a/mobileApp/package.json
+++ b/mobileApp/package.json
@@ -15,7 +15,8 @@
 		"nativescript-socket.io": "^0.9.0",
 		"nativescript-theme-core": "~1.0.4",
 		"nativescript-vibrate": "^2.0.1",
-		"tns-core-modules": "~3.4.0"
+		"tns-core-modules": "~3.4.0",
+		"util": "^0.10.3"
 	},
 	"devDependencies": {
 		"babel-traverse": "6.4.5",
