--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
+*/*package-lock.json
+
 # dependencies
 gestionweb/node_modules
 
@@ -24,6 +26,7 @@ gestionweb/yarn-error.log*
 # Created by https://www.gitignore.io/api/node
 
 .remote-sync.json
+
 
 ### Node ###
 # Logs
