--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "json-fs-store": "^1.0.1",
+    "lodash": "^4.17.4",
     "socket.io": "^2.0.4"
   }
 }
