--- a/gestionweb/package.json
+++ b/gestionweb/package.json
@@ -6,7 +6,8 @@
     "google-maps-react": "^1.1.2",
     "react": "^15.0.0",
     "react-dom": "^15.0.0",
-    "react-scripts": "1.1.0"
+    "react-scripts": "1.1.0",
+    "socket.io-client": "^2.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
